First version of vulnerable app